--- a/app/src/main/res/layout/customized_layout.xml
+++ b/app/src/main/res/layout/customized_layout.xml
@@ -2,27 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
     android:orientation="vertical">
-
-    <EditText
-        android:id="@+id/namePlainText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Name" />
-
-    <EditText
-        android:id="@+id/rollNoPlainText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Roll Number"
-        android:inputType="textPersonName"
-        android:minHeight="48dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/namePlainText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:hint="Name" />
+
+        <EditText
+            android:id="@+id/rollNoPlainText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:ems="10"
+            android:hint="Roll Number"
+            android:inputType="textPersonName"
+            android:minHeight="48dp" />
 
         <Switch
             android:id="@+id/enrolledSwitch"
@@ -30,11 +33,19 @@
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:text="isEnrolled" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/updateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="Update" />
 
@@ -42,6 +53,8 @@
             android:id="@+id/deleteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="Delete" />
     </LinearLayout>
